--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
     background-color: rgb(41, 57, 194);
     border: none;
     border-radius: 4px;
+    cursor: pointer;
 }
 
 .input-control {
